# puppet-openstacklib

./: .fixtures.yml  .gitignore  .gitreview  .zuul.yaml  CHANGELOG.md  CONTRIBUTING.rst  Gemfile  Modulefile  README.md  Rakefile  metadata.json  setup.cfg
examples/: virtual_packages.pp
facts.d/: os_immutable.txt  os_service_default.txt
lib/facter/: os_package_type.rb  os_service_default.rb  os_workers.rb
manifests/: clouds.pp  defaults.pp  iscsid.pp  openstackclient.pp  params.pp  policy.pp  policyrcd.pp  service_validation.pp
manifests/db/: mysql.pp  postgresql.pp
manifests/messaging/: rabbitmq.pp
manifests/policy/: base.pp  default.pp
manifests/wsgi/: apache.pp
releasenotes/notes/: Add-TLS-options-for-mysql-user-creation-172536d7f3963ce2.yaml  access_log_env_var-87f4bfd3356c6cd2.yaml  add-ssl_verify_client-87e52209cc80861d.yaml  apache-request_headers-1db72ccfd1e76735.yaml  apache-vhost-wsgi_daemon_process-3e90ea82934cbaea.yaml  bugfix-1664561-f5964a3777b9ed93.yaml  bump-mysql-dep-10-217373db021b4c1f.yaml  catch_403-237b79f33ab3364f.yaml  clouds-yaml-e8a87dfceba4619d.yaml  clouds-yaml-owner-group-4e7b2d4e7028cfef.yaml  db-password_hash-1045114a36b6f292.yaml  deprecate-custom_wsgi_script_aliases-da5da467f3589b76.yaml  deprecate-postgresql-a626f49f46bd6799.yaml  deprecate-puppet-5-support-1864c361a7a9d402.yaml  deprecate-puppet4-59a430de68834017.yaml  deprecate-wsgi-apache-set_wsgi_import_script-7dc473250b364100.yaml  (+46 more)
spec/: spec_helper.rb  spec_helper_acceptance.rb
templates/: clouds.yaml.erb  policy-rc.d.erb
types/: policies.pp  servicedefault.pp
(+65 files in other folders)
